--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 
 html,
 body {
-  margin: 0;
-  padding: 0;
+  width: 100vw;
+  background-color: black;
+  color: white;
+}
+
+@theme {
+  --color-white-50: #d9ecff;
+  --color-blue-100: #2d2d38;
 }
